--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.IT_English" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.IT_English" parent="Theme.MaterialComponents">
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">#7169B4</item>
         <item name="colorPrimaryDark">#7169B4</item>
         <item name="colorAccent">#D5C8FE</item>
         <!-- Customize your theme here. -->
+
+
     </style>
 </resources>
