Создание страниц для описания определений

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,4 +9,10 @@
 
 
     </style>
+    <style name="Theme.IT_English.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.IT_English.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.IT_English.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
