--- a/app/src/main/res/layout/template.xml
+++ b/app/src/main/res/layout/template.xml
@@ -16,11 +16,12 @@
 
     <TextView
         android:id="@+id/Name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="TextView"
+        android:layout_marginEnd="5dp"
         app:layout_constraintBottom_toBottomOf="@+id/Icon"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Icon"
         app:layout_constraintTop_toTopOf="@+id/Icon" />
 
