--- a/app/src/main/res/layout/activity_term.xml
+++ b/app/src/main/res/layout/activity_term.xml
@@ -23,9 +23,10 @@
                 android:id="@+id/Name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="7dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="5dp"
                 android:gravity="center"
                 android:text="TextView"
                 android:textAlignment="center"
@@ -36,9 +37,10 @@
                 android:id="@+id/Description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="5dp"
                 android:text=""
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" />
@@ -50,6 +52,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 tools:srcCompat="@tools:sample/avatars" />
         </LinearLayout>
     </ScrollView>
