--- a/app/src/main/res/layout/activity_term.xml
+++ b/app/src/main/res/layout/activity_term.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.terms.TermActivity">
+    tools:context="com.ntdvv.it_english.ui.terms.TermActivity">
 
     <ScrollView
         android:id="@+id/Scroll"
