--- a/app/src/main/res/layout/activity_term.xml
+++ b/app/src/main/res/layout/activity_term.xml
@@ -33,7 +33,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold|italic" />
 
-            <TextView
+            <WebView
                 android:id="@+id/Description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,7 +43,8 @@
                 android:layout_marginBottom="5dp"
                 android:text=""
                 android:textAlignment="viewStart"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                tools:ignore="WebViewLayout" />
 
             <ImageView
                 android:id="@+id/Img"
