Статья о языке программирования C++

--- a/data/templates/programming_language.html
+++ b/data/templates/programming_language.html
@@ -8,7 +8,8 @@
 <p>*programming language name* can be pronunced like ""</p>
 <p></p>
 
-<h3>Purpose</h3>
+<h3>Purposes</h3>
+<p></p>
 
 <h3>Products written with *programming language name*</h3>
 <ol>
